# pnmfc

./: CMakeLists.txt  README.md  config.h.cmake  dune.module  harsha_pnm.pc.in
appl/: CMakeLists.txt
appl/1p/: CMakeLists.txt  main.cc  params_10x10.input  params_1D.input  params_1p.input  params_simple.input  problem.hh  problem_1p.hh
appl/1p/files/: spatialparams.hh
appl/1p/grids/: 10x10-Test-1Pore.dgf  10x10-Test-TopPores.dgf  9 x 4-Test_coord_inc.dgf  9 x 4-Test_rad.dgf
appl/1pnc/: CMakeLists.txt  main.cc  params.input  params_1pnc.input  params_diffusion.input  problem_1pnc.hh  problem_1pnc_air.hh  problem_1pnc_h2oair.hh  problem_1pnc_h2on2.hh
appl/1pnc/files/: spatialparams.hh
appl/1pnc/grids/: 9 x 4-Test.dgf  9 x 4-Test_L2.dgf  9 x 4-Test_outThroat.dgf  9 x 5-Test_L2.dgf
appl/2p/: CMakeLists.txt  main_bc.cc  main_dr_sink.cc  main_out.cc  main_plot_constitutive_laws.cc  main_sink.cc  params.input  params_2p_dr_bc_sink.input  params_2p_im.input  params_2p_im_bc.input  params_2p_im_bc_sink.input  params_2p_im_magic.input  problem_2p_dr_sink.hh  problem_2p_im.hh  problem_2p_im_bc.hh  problem_2p_im_magic_out.hh  problem_2p_im_sink.hh  properties.hh
appl/2p/grids/: 9 x 4-Test_magic.dgf  9 x 4-Test_steff.dgf
appl/2p/pcswcurve/: CMakeLists.txt  main_dynamic.cc
appl/2p/static/: CMakeLists.txt  params_2pStatic.input
appl/2p/static/grids/: 5 x 1-Test_converted.dgf  9 x 4-Test.dgf  9 x 4-Test_converted.dgf  9 x 4-Test_converted_2xporRad.dgf  9 x 4-Test_n2inj.dgf  9 x 4-Test_sameThroat.dgf  9 x 4-Test_varSize.dgf
appl/2p_bc/: CMakeLists.txt  main_bc.cc  params.input  problem_bc.hh
appl/2p_bc/files/: spatialparams_im.hh
appl/2p_bc/grids/: 9 x 4-Test_ghost.dgf
appl/2p_bc/py_plot/: gn_realtime_curve_plotter.py  gn_time_curve_plotter.py  gw_pcij_realtime_curve_plotter.py  gw_time_curve_plotter.py  merge_gw_gn_realtime_curve_plotter.py  pc_realtime_curve_plotter.py  pc_sw_curve_plotter.py  pn_realtime_curve_plotter_milestone.py  sw_realtime_curve_plotter.py  sw_realtime_curve_plotter_milestone.py
appl/2p_magic/: CMakeLists.txt  main_het.cc  main_oil_wat.cc  params_magic.input  params_magic_het.input  params_magic_small_throat.input  problem_magic.hh  problem_magic_het.hh  problem_oil_wat.hh
appl/2p_magic/files/: spatialparams_im.hh
appl/2p_magic/grids/: 9 x 4-Test.dgf  9 x 4-Test_magic.dgf  9 x 4-Test_magic_het.dgf  9 x 4-Test_sink.dgf  9 x 9-Test_magic.dgf
appl/2p_magic/py_plot/: gn_pcij_realtime_curve_plotter.py  gw_realtime_comp_curve_plotter.py  gw_realtime_curve_plotter.py  merge_gw_gn_realtime_curve_plotter.py  pc_sw_curve_plotter.py  pn_realtime_curve_plotter.py  pn_realtime_curve_plotter_big.py  pn_realtime_curve_plotter_compare.py  pn_time_curve_plotter.py  pw_realtime_curve_plotter.py  sw_realtime_curve_plotter.py  sw_realtime_curve_plotter_big.py  sw_time_curve_plotter.py
appl/2p_sink/: CMakeLists.txt  all_local_plots.ipynb  main.cc  main_het.cc  params_magic.input  params_magic_het.input  params_magic_oil_wat.input  params_magic_small_throat.input  pc_sw_curve_plotter.py  problem_magic.hh  problem_magic_het.hh
appl/2p_sink/grids/: 9 x 4-Test_magic.dgf  9 x 4-Test_magic_het.dgf  9 x 4-Test_magic_pore_small.dgf  9 x 4-Test_magic_small_throat.dgf
appl/2p_sink/py_plot/: gn_realtime_curve_plotter.py  gw_realtime_curve_plotter.py  (+6 more)
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/harsha_pnm/: CMakeLists.txt  harsha_pnm.hh
src/: CMakeLists.txt  harsha_pnm.cc
